# sol2-luajit-cmake

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
